@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/TODO,v 1.1195 2012-07-20 23:37:21 zender Exp $ 
+$Header: /data/zender/nco_20150216/nco/doc/TODO,v 1.1196 2012-07-23 05:17:20 zender Exp $ 
 
 # Purpose: TODO items for NCO
 
@@ -698,7 +698,8 @@ nco1060. ncra: allow stride argument to determine averaging length, and store mu
 	 ncra2 -O -C -F -d time,1,10,2,2 -v one_dmn_rec_var -p ~/nco/data in.nc ~/foo.nc # Average (in pairs) every slice, store 1 (norm at end)
 	 ncrcat2 -O -C -F -d time,1,10,4,2 -v one_dmn_rec_var -p ~/nco/data in.nc ~/foo.nc # Concat every fourth pair of slices, store 1,2,5,6,9,10
 nco1063. use '--with-nc-config=path' in configure when possible (rich signell idea) 
-nco1064. 
+nco1064. ncra: add "input complete" flag to MFOs to jump out of file loop once all requested records read
+nco1065. 
 qrk
 ************************************************************************
 End ncoXXX TODOs
