@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco.h,v 1.180 2012-07-21 07:12:38 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco.h,v 1.181 2012-07-23 05:17:20 zender Exp $ */
 
 /* Purpose: netCDF Operator (NCO) definitions */
 
@@ -451,6 +451,7 @@ extern "C" {
     long rec_in_cml; /* Number of records, read or not, in all processed files (multi-file record dimension only) */
     long rec_skp_ntl_spf; /* Records skipped in initial superfluous files (multi-file record dimension only) */
     long rec_skp_vld_prv; /* Records skipped since previous good one (multi-file record dimension only) */
+    long rec_rmn_prv_drn; /* Records remaining-to-be-read to complete duration group from previous file (multi-file record dimension only) */
     long srd; /* Stride of hyperslab */
     long srt; /* Index to start of hyperslab */
     nco_bool flg_mro; /* True for multi-record output (used by ncra only) */
