@@ -1,3 +1,7 @@
+2012-07-22  Charlie Zender  <zender@uci.edu>
+
+	* Update limit code. Introduce off-by-one error on stride. Will fix tomorrow.
+
 2012-07-21  Charlie Zender  <zender@uci.edu>
 
 	* De-conflate rec_skp_ntl_spf from rec_in_cml
